# alcibiades

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
alcibiades/: AddMove.t.html  BOUND_EXACT.v.html  DEPTH_MAX.v.html  DEPTH_MIN.v.html  DeepeningSearch.t.html  IllegalBoard.t.html  KING.v.html  KINGSIDE.v.html  MOVE_ENPASSANT.v.html  MoveDigest.t.html  MoveType.t.html  OptionDescription.t.html  PIECE_NONE.v.html  PieceType.t.html  PiecesPlacement.t.html  Qsearch.t.html  QsearchParams.t.html  QsearchResult.t.html  ROOK.v.html  RemainingTime.t.html  Search.t.html  SearchNode.t.html  SetOption.t.html  Ttable.t.html  TtableEntry.t.html  VALUE_EVAL_MIN.v.html  Variation.t.html  constant.BISHOP.html  constant.BLACK.html  constant.BOUND_EXACT.html  constant.BOUND_LOWER.html  constant.BOUND_NONE.html  constant.BOUND_UPPER.html  constant.DEPTH_MAX.html  constant.DEPTH_MIN.html  constant.KING.html  constant.KINGSIDE.html  constant.KNIGHT.html  constant.MOVE_CASTLING.html  constant.MOVE_ENPASSANT.html  (+50 more)
alcibiades/bitsets/: BB_ALL.v.html  BB_FILE_A.v.html  BB_FILE_B.v.html  BB_FILE_C.v.html  bsf.v.html  (+65 more)
src/: basetypes.rs  bitsets.rs  board.rs  castling_rights.rs  chess_move.rs  depth.rs  engine.rs  evaluator.rs  fen.rs  files.rs  hash_table.rs  lib.rs  main.rs  move_generator.rs  movegen.rs  moves.rs  notation.rs  pv.rs  qsearch.rs  quiescence.rs  ranks.rs  search.rs  search_executor.rs  search_management.rs  search_node.rs  squares.rs  time_manager.rs  tt.rs  ttable.rs  uci.rs  utils.rs  value.rs
tests/: bitset_ops.rs  move_generation.rs
(+509 files in other folders)
