[package]
name = "alcibiades"
version = "0.1.0"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]

[[bin]]
name = "alcibiades-engine"

[dependencies]
lazy_static = "0.2.1"
regex = "0.1.71"
rand = "0.3.14"

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
