[package]
name = "alcibiades"
version = "0.3.0"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
description = "A framework for writing chess engines in Rust"
repository = "https://github.com/epandurski/alcibiades"
documentation = "https://epandurski.github.io/alcibiades"
homepage = "https://github.com/epandurski/alcibiades"
readme = "README.md"
license = "MIT"
keywords = ["chess", "framework"]

[dependencies]
libc = "0.2.18"
lazy_static = "0.2.1"
regex = "0.2.1"
rand = "0.3.14"
